test/classes/errors/nilability-return-yield/return-owned.good
return-owned.chpl:3: In function 'P':
return-owned.chpl:3: error: cannot initialize 'owned C' from a 'owned C?'
